# stackhpc.kayobe_automation_workflows

./: README.md  galaxy.yml  pyproject.toml
roles/github/: README.md
roles/github/defaults/: main.yml
roles/github/handlers/: main.yml
roles/github/meta/: main.yml
roles/github/tasks/: main.yml
roles/github/templates/: build-kayobe-docker-image.yml.j2  generic.yml.j2  header.yml.j2  run-config-diff.yml.j2  run-tempest.yml.j2  workflow.yml.j2
roles/github/tests/: test.yml
roles/github/vars/: main.yml
